# proton-disorder

./: .gitignore  LICENSE.md  Link.py  NOTES.md  Oxygen.py  README.md  create_thf_hydrate.ipynb  original_dipole.f  parellel_proton_disorder.py  proton-disorder-test.ipynb  proton-disorder.py  pyproject.toml  sII_proton_disorder.ipynb  thf-hydrate-randomized.ipynb
input/: tip4p_hydrate.csv  tip4p_hydrate_3_3.csv  tip4p_hydrate_3_3.xyz
output/: ice.xyz  low_hydrate.csv  proton-disorder.code-workspace
proton-disorder/: constants.py
proton_disorder/: __init__.py  __main__.py
proton_disorder/src/: __init__.py  constants.py  gen_output.py  mc.py  parsing.py
v1/: HalfLink.py  Link.py  Oxygen.py  proton-disorder.py
